finalize refact into display rules, categories and accounts